[package]
name = "cvpn-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["cookies"] }
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"]}
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
scraper = "0.13"
dotenv = "0.15"
rpassword = "6.0.1"
