[package]
name = "cvpn"
version = "0.1.0"
edition = "2021"
description = "a CLI application of VPN service at Faculty of Informatics, Shizuoka University"
repository = "https://github.com/earlgray283/cvpn-rs"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["cookies"] }
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"]}
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
scraper = "0.13"
dotenv = "0.15"
rpassword = "6.0.1"
spinners = "4.0"
regex = "1.5"
once_cell = "1.10"
percent-encoding = "2.1"
futures = "0.3"